{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 1,
  "lineage": "74dea5d4-4fc6-8c53-fefe-51dc7ef582e3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "stg_rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:536033748497:route-table/rtb-0a4e62c8be424b581",
            "id": "rtb-0a4e62c8be424b581",
            "owner_id": "536033748497",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "t101-rt2"
            },
            "tags_all": {
              "Name": "t101-rt2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a9bd7fed55845e33"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.stg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "stg_rtassociation3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0961c84d580ccc46f",
            "route_table_id": "rtb-0a4e62c8be424b581",
            "subnet_id": "subnet-0cc5f7b9108ece2d2"
          },
          "dependencies": [
            "aws_route_table.stg_rt2",
            "aws_subnet.stg_subnet3",
            "aws_vpc.stg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "stg_rtassociation4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-034fe87add78a6959",
            "route_table_id": "rtb-0a4e62c8be424b581",
            "subnet_id": "subnet-02e32b1e622856b55"
          },
          "dependencies": [
            "aws_route_table.stg_rt2",
            "aws_subnet.stg_subnet4",
            "aws_vpc.stg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "stg_sg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:536033748497:security-group/sg-0f2553f5933180c9f",
            "description": "T101 Study SG - RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f2553f5933180c9f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "T101 SG - RDS",
            "name_prefix": "",
            "owner_id": "536033748497",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a9bd7fed55845e33"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.stg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rdssginbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3897800370",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f2553f5933180c9f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3389,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.stg_sg2",
            "aws_vpc.stg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rdssgoutbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3045332280",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0f2553f5933180c9f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.stg_sg2",
            "aws_vpc.stg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "stg_subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:536033748497:subnet/subnet-0cc5f7b9108ece2d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc5f7b9108ece2d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "536033748497",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "t101-subnet3"
            },
            "tags_all": {
              "Name": "t101-subnet3"
            },
            "vpc_id": "vpc-0a9bd7fed55845e33"
          },
          "dependencies": [
            "aws_vpc.stg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "stg_subnet4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:536033748497:subnet/subnet-02e32b1e622856b55",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.10.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e32b1e622856b55",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "536033748497",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "t101-subnet4"
            },
            "tags_all": {
              "Name": "t101-subnet4"
            },
            "vpc_id": "vpc-0a9bd7fed55845e33"
          },
          "dependencies": [
            "aws_vpc.stg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "stg_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:536033748497:vpc/vpc-0a9bd7fed55845e33",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0f4da401f4448cc7f",
            "default_route_table_id": "rtb-0f52622ee2c65f1af",
            "default_security_group_id": "sg-0c44edca13bdcdf99",
            "dhcp_options_id": "dopt-00dc5f3b037441112",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a9bd7fed55845e33",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f52622ee2c65f1af",
            "owner_id": "536033748497",
            "tags": {
              "Name": "t101-study"
            },
            "tags_all": {
              "Name": "t101-study"
            }
          }
        }
      ]
    }
  ]
}